[package]
name = "height-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.1", features = ["url", "issue-url"] }
dialoguer = { version = "0.10.1", default-features = false }
indicatif = "0.16.2"
